# Cokpyt

./: CONTRIBUTING.md  README.md  app.go  go.mod  main.go  package-lock.json  wails.json
.github/workflows/: deploy-docs.yml  release.yml
Cokpyt-pip/: pyproject.toml
Cokpyt-pip/cokpyt/: installer.py
backend/pip/: cleanup.go  config.go  envinfo.go  envs.go  history.go  logs.go  proc_stub.go  proc_windows.go  search.go  services.go  size.go
docs/: docusaurus.config.ts  package-lock.json
docs/blog/: authors.yml
docs/docs/: contributing.md  installation.md  intro.md
docs/docs/features/: dashboard.md  environment.md  installed-packages.md  logs.md  settings.md  updates.md
docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/src/pages/: index.module.css  index.tsx
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: PipTerminal.tsx
frontend/src/lib/: tour.ts
frontend/src/pages/: Cleanup.tsx  Dashboard.tsx  History.tsx  InstalledPackages.tsx  Logs.tsx  PackageManagers.tsx  Search.tsx  Settings.tsx  Updates.tsx
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
